2020-07-03  Darin Adler  <darin@apple.com>

        WebCore/Sources.txt: Remove #if ENABLE_WIRELESS_PLAYBACK_TARGET
        https://bugs.webkit.org/show_bug.cgi?id=213945

        Reviewed by Sam Weinig.

        * CMakeLists.txt: Moved items from the pictureinpicture and remoteplayback module here
        from PlatformMac.cmake. Even if these are currently only implemented on Mac, they are
        not intrinsically Mac-specific, so they belong here.
        * PlatformMac.cmake: Ditto.

        * Sources.txt: Remove #if ENABLE_WIRELESS_PLAYBACK_TARGET and sort files in with the others.
        The source files themselves have conditionals, we don't need conditionals in Sources.txt,
        and we are moving towards removing the capability for #if ENABLE in the Sources.txt file.

2020-07-03  Sam Weinig  <weinig@apple.com>

        Remove support for ENABLE_INPUT_TYPE_DATETIME_INCOMPLETE
        https://bugs.webkit.org/show_bug.cgi?id=213932

        Reviewed by Darin Adler.

        Removes support for non-standard <input type="datetime">, currently being 
        guarded by the macro ENABLE_INPUT_TYPE_DATETIME_INCOMPLETE. This macro, was
        added back in 2013 as a temporary measure to support some engines who shipped
        support for <input type="datetime">. It is currently not enabled for any
        ports so now seems like as good a time as any to remove it.

        * Configurations/FeatureDefines.xcconfig:
        * Sources.txt:
        * WebCore.xcodeproj/project.pbxproj:
        * css/html.css:
        (#endif):
        * html/DateTimeInputType.cpp: Removed.
        * html/DateTimeInputType.h: Removed.
        * html/InputType.cpp:
        (WebCore::createInputTypeFactoryMap):
        * page/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::inputTypeDateTimeEnabled const): Deleted.
        (WebCore::RuntimeEnabledFeatures::setInputTypeDateTimeEnabled): Deleted.
        * platform/DateComponents.cpp: